<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheeZhi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="plase_login_ch">请登录</string>
    <string name="plase_login_en">Sign In</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_en">Username</string>
    <string name="username_ch">请输入帐号或者用户名</string>
    <string name="password_en">Password</string>
    <string name="password_ch">请输入密码</string>
    <string name="login_ch">登录</string>
    <string name="login_en">Sign In</string>
    <string name="login_other_ch">以其他方式登录</string>
    <string name="login_other_en">Login In Other Ways</string>
    <string name="register_ch">没有帐号？现在注册！</string>
    <string name="register_en">New To CheeZhi? Sign Up Now!</string>
    <string name="title_activity_login_others">LoginOthersActivity</string>
    <string name="weibo_login_ch">微博登录</string>
    <string name="weibo_login_en">WeiBo Login</string>
    <string name="weixin_login_ch">微信登录</string>
    <string name="weixin_login_en">WeiXin Login</string>
    <string name="feedback_ch">意见反馈</string>
    <string name="feedback_en">Feedback</string>
    <string name="aboutus_ch">关于我们</string>
    <string name="aboutus_en">About Us</string>
    <string name="exit_login_ch">退出登录</string>
    <string name="exit_login_en">Sign Out</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="sendMessage_ch">请输入您宝贵的意见</string>
    <string name="sendMessage_en">Plase Enter Your Valuable Comments</string>
    <string name="confirm_ch">确定</string>
    <string name="confirm_en">Confirm</string>
    <string name="empty_input_ch">输入为空</string>
    <string name="empty_input_en">Enter Empty</string>
    <string name="contact_ch">联系方式</string>
    <string name="contact_en">Contact</string>
    <string name="enterPhone_ch">输入邮箱或手机号</string>
    <string name="enterPhone_en">Email Or Phone No.</string>
    <string name="title_activity_aboutus">AboutusActivity</string>
    <string name="name">杭州-奇芝</string>
    <string name="slogan">动感奇芝，触动你的心</string>
    <string name="email">邮箱 : </string>
    <string name="email_text">contact@cheezhi.com</string>
    <string name="phone">电话 : </string>
    <string name="phone_text">0571—56622731</string>
    <string name="net_ad">网址 : </string>
    <string name="net_add_text">http://www.cheezhi.com/</string>
    <string name="name1">Copyright © Cheezhi Techonology</string>
    <string name="name2">浙ICP备15028630号-1</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_name_ch">注册</string>
    <string name="register_name_en">register</string>
    <string name="send_message">发送验证码</string>
    <string name="next_step">下一步</string>
    <string name="input_phoneNum">输入手机号</string>
    <string name="input_yanzheng">输入验证码</string>
    <string name="title_activity_set_code">SetCodeActivity</string>
    <string name="setcode_en">Set Info</string>
    <string name="setcode_ch">设置信息</string>
    <string name="inputname">设置用户名</string>
    <string name="setcode">设置密码</string>
    <string name="confirm_code">确认密码</string>
    <string name="buletooth_pro">蓝牙连接中...</string>
    <string name="cancel_blue">取    消</string>
    <string name="title_activity_wxentry">WXEntryActivity</string>
    <string name="alredy_link">蓝牙已连接</string>
    <string name="cut_link">断开连接</string>
    <string name="join">进入管理</string>
    <string name="title_activity_fixing">FixingActivity</string>
    <string name="stating">设备状态</string>
    <string name="state_name1">良好</string>
    <string name="state_name2">一般</string>
    <string name="state_name3">故障</string>
    <string name="detial_info">查看详情</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="map">MAP</string>
    <string name="messages">消息中心</string>
    <string name="no_message">暂无消息</string>
    <string name="hardware">硬件信息</string>
    <string name="set">设置</string>
    <string name="power">当前电量</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_hardware_info">HardwareInfoActivity</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="username_info">用户名</string>
    <string name="edit_username">修改用户名</string>
    <string name="edit_password">修改密码</string>
    <string name="edit_phone">修改绑定手机</string>
    <string name="title_activity_fixdetial">FixdetialActivity</string>
    <string name="fixdetial">设备详情</string>
</resources>